// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyleCards, Buttons Check Button 1`] = `
{
  "button": {
    "background-color-global": true,
    "border-color-global": true,
    "color": "",
    "color-global": true,
    "font-size-general": 20,
    "font-size-unit-general": "px",
    "font-size-unit-xl": "px",
    "font-size-xl": 20,
    "font-style-general": "italic",
    "font-weight-general": "300",
    "hover-background-color-global": true,
    "hover-border-color-global": true,
    "hover-color-global": true,
    "letter-spacing-general": 5,
    "letter-spacing-unit-general": "px",
    "letter-spacing-unit-xl": "px",
    "letter-spacing-xl": 5,
    "line-height-general": 10,
    "line-height-unit-general": "%",
    "line-height-xl": 100,
    "palette-color": 4,
    "palette-opacity": 1,
    "palette-status": true,
    "text-decoration-general": "overline",
    "text-indent-general": 44,
    "text-indent-unit-general": "px",
    "text-transform-general": "capitalize",
    "white-space-general": "pre",
    "word-spacing-general": 10,
    "word-spacing-unit-general": "px",
  },
}
`;

exports[`StyleCards, Buttons Should work on responsive 1`] = `
{
  "button": {
    "background-color-global": true,
    "border-color-global": true,
    "color": "",
    "color-global": true,
    "font-size-general": 20,
    "font-size-m": 10,
    "font-size-unit-general": "px",
    "font-size-unit-xl": "px",
    "font-size-xl": 20,
    "font-style-general": "italic",
    "font-style-m": "oblique",
    "font-style-xl": "italic",
    "font-weight-general": "300",
    "font-weight-m": "400",
    "font-weight-xl": "300",
    "hover-background-color-global": true,
    "hover-border-color-global": true,
    "hover-color-global": true,
    "letter-spacing-general": 5,
    "letter-spacing-m": 15,
    "letter-spacing-unit-general": "px",
    "letter-spacing-unit-xl": "px",
    "letter-spacing-xl": 5,
    "line-height-general": 10,
    "line-height-m": 20,
    "line-height-unit-general": "%",
    "line-height-xl": 100,
    "palette-color": 4,
    "palette-opacity": 1,
    "palette-status": true,
    "text-decoration-general": "overline",
    "text-decoration-m": "underline",
    "text-decoration-xl": "overline",
    "text-indent-general": 44,
    "text-indent-m": 22,
    "text-indent-unit-general": "px",
    "text-indent-xl": 44,
    "text-transform-general": "capitalize",
    "text-transform-m": "uppercase",
    "text-transform-xl": "capitalize",
    "white-space-general": "pre",
    "white-space-m": "pre-wrap",
    "white-space-xl": "pre",
    "word-spacing-general": 10,
    "word-spacing-m": 20,
    "word-spacing-unit-general": "px",
    "word-spacing-xl": 10,
  },
}
`;
